--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ bower.json
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Ignore application configuration
+/config/application.yml
